# tree-sitter-vbscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  setup.py  test.vba  tree-sitter.json
bindings/c/: tree-sitter-vbscript.h  tree-sitter-vbscript.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vbscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVbscriptTests/: TreeSitterVbscriptTests.swift
src/: grammar.json  node-types.json  parser.c
