[package]
name = "tree-sitter-vbscript"
description = "no"
version = "0.1.0"
authors = ["Gabriel Vitor Klaumann Gubert gvkg97@gmail.com"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vbscript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/gabriel-gubert/tree-sitter-vbscript.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.0"
